--- a/Experiments.ipynb
+++ b/Experiments.ipynb
@@ -71,7 +71,7 @@
     "repo_name = 'time-series-representation-learning'\n",
     "# your password is converted into url format\n",
     "password = urllib.parse.quote(password)\n",
-    "cmd_string = 'git clone https://{0}:{1}@github.com/{2}/{3}.git'.format(user, password, repo_user, repo_name)\n",
+    "cmd_string = 'git clone --branch sam https://{0}:{1}@github.com/{2}/{3}.git'.format(user, password, repo_user, repo_name)\n",
     "os.system(cmd_string)\n",
     "cmd_string, password = \"\", \"\" # removing the password from the variable\n",
     "# Bad password fails silently so make sure the repo was copied\n",
@@ -126,57 +126,6 @@
     "#cd /content/drive/MyDrive/MVA/Gaze/GazeCapture/pytorch\n",
     "ROOT_DATA = '/content/drive/MyDrive/'"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "SUBQxqvXSFU_"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "tGZKFX-USFXj"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "JkykZea7SFaH"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "O4FPr1TMQKGN"
-   },
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "!wget http://www.timeseriesclassification.com/Downloads/Archives/Multivariate2018_arff.zip\n",
-    "!unzip -P 'someone' UCRArchive_2018.zip -d /content/time-series-representation-learning/\n",
-    "!mv /content/time-series-representation-learning/Multivariate2018_arff /content/time-series-representation-learning/data\n",
-    "!rm Multivariate2018_arff.zip"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "u2SX3JlfRmDY"
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
