--- a/Experiments.ipynb
+++ b/Experiments.ipynb
@@ -181,7 +181,7 @@
     "import torch\n",
     "\n",
     "from datamodule import TimeSeriesDataModule\n",
-    "from loss import TripletLoss\n",
+    "from loss import TripletLossXent, TripletLossLogi\n",
     "from model import (\n",
     "    CausalCNN,\n",
     "    CausalCNNEncoder,\n",
@@ -191,6 +191,7 @@
     ")\n",
     "from train import TimeSeriesEmbedder\n",
     "from utils import load_UCR_dataset\n",
+    "from scorer import compute_accuracy\n",
     "\n",
     "root_data = \"./data/\"\n",
     "\n",
@@ -616,9 +617,6 @@
     "    lr=lr,\n",
     "    weight_decay = weight_decay,\n",
     "    betas = betas,\n",
-    "    train_path='',\n",
-    "    test_path='', \n",
-    "    dataset_name=dataset_name,\n",
     "    multivariate=True, \n",
     "    loss = loss,\n",
     "    temp = temp)\n",
@@ -697,11 +695,8 @@
     "# try:\n",
     "train_score, test_score = compute_accuracy(model, datamodule)\n",
     "print(\"\\n\", train_score, test_score)\n",
-    "dataset_name.append(os.path.basename(dir_path))\n",
     "wandb.log({\"Train score\": train_score})\n",
     "wandb.log({\"Test score\": test_score})\n",
-    "train_score_list.append(train_score)\n",
-    "test_score_list.append(test_score)\n",
     "run.finish()"
    ]
   },
@@ -718,29 +713,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "Q7xs-DuxJNjV"
-   },
-   "outputs": [],
-   "source": [
-    "train_score, test_score = model.compute_scores()\n",
-    "print('\\n', train_score, test_score)\n",
-    "dataset_name.append(dataset_name)\n",
-    "wandb.log({'Train score': train_score})\n",
-    "wandb.log({'Test score': test_score})\n",
-    "train_score_list.append(train_score)\n",
-    "test_score_list.append(test_score)\n",
-    "# except:\n",
-    "#     print('Dataset: {} does not have enough example per class (will fix that)'.format(os.path.basename(dir_path)))\n",
-    "run.finish()\n",
-    "\n",
-    "results = pd.DataFrame(np.array([dataset_name, train_score_list, test_score_list]).transpose(),columns=[\"Name\", \"Train Accuracy\", \"Test Accuracy\"],)\n",
-    "results.to_csv(\"./results_transferability_multivariate.csv\")"
-   ]
   },
   {
    "cell_type": "code",
@@ -817,95 +789,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "MUrE0rm8JNnr",
-    "outputId": "f206abf2-b080-4fd1-c2a6-4e1e5053b0b4"
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import (GridSearchCV,train_test_split, cross_val_score)\n",
-    "from sklearn.svm import SVC\n",
-    "def compute_scores_transfer(model, datamodule):\n",
-    "    '''\n",
-    "        Compute SVM accuracy score on the train then test set. Is sufficient train data, SVM C hyperparameters is found using grid search.  \n",
-    "    '''\n",
-    "\n",
-    "    train_loader = datamodule.val_dataloader()\n",
-    "    test_loader = datamodule.test_dataloader()\n",
-    "    train_emb = list()\n",
-    "    train_labels = list()\n",
-    "    if not model.multivariate:\n",
-    "        for _, (labels, train_series) in enumerate(train_loader):\n",
-    "            train_emb.append(model(train_series[:,None,:].cuda()).cpu().detach().numpy())\n",
-    "            train_labels.append(labels.numpy())\n",
-    "        train_emb = np.concatenate(train_emb)\n",
-    "        train_labels = np.concatenate(train_labels)\n",
-    "    else:\n",
-    "        for _, (labels, train_series) in enumerate(train_loader):\n",
-    "            train_emb.append(model(train_series.cuda()).cpu().detach().numpy())\n",
-    "            train_labels.append(labels.numpy())\n",
-    "        train_emb = np.concatenate(train_emb)\n",
-    "        train_labels = np.concatenate(train_labels)\n",
-    "\n",
-    "    \n",
-    "    nb_classes = len(np.unique(train_labels))\n",
-    "    train_size = train_emb.shape[0]\n",
-    "\n",
-    "    classifier = SVC(C=np.inf, gamma='scale')\n",
-    "    if train_size // nb_classes < 5 or train_size < 50:\n",
-    "        classifier = classifier.fit(train_emb, train_labels)\n",
-    "    else:\n",
-    "        grid_search = GridSearchCV(classifier, {'C': [0.0001, 0.001, 0.01, 0.1, 1, 10, 100, 1000, 10000,np.inf],\n",
-    "                                                                        'kernel': ['linear'],'degree': [3],'gamma': ['scale'],'coef0': [0],'shrinking': [True],'probability': [False],'tol': [0.001],\n",
-    "                                                                            'cache_size': [200], 'class_weight': [None],'verbose': [False],'max_iter': [10000000],\n",
-    "                                                                        'decision_function_shape': ['ovr'],'random_state': [None]}, cv=5, n_jobs=5)\n",
-    "        if train_size <= 10000:\n",
-    "            grid_search.fit(train_emb, train_labels)\n",
-    "        else:\n",
-    "            # If the training set is too large, subsample 10000 train\n",
-    "            # examples\n",
-    "            split = train_test_split(\n",
-    "                train_emb, train_labels,\n",
-    "                train_size=10000, random_state=0, stratify=y\n",
-    "            )\n",
-    "            grid_search.fit(split[0], split[2])\n",
-    "        classifier = grid_search.best_estimator_\n",
-    "\n",
-    "    # Cross validation score\n",
-    "    train_score = np.mean(cross_val_score(classifier, train_emb, y=train_labels, cv=5, n_jobs=5))\n",
-    "    \n",
-    "    \n",
-    "    # Predict class for the test set\n",
-    "    if not model.multivariate:\n",
-    "        test_emb = list()\n",
-    "        test_labels = list()\n",
-    "        for _, (labels, test_series) in enumerate(test_loader):\n",
-    "            test_emb.append(model(test_series[:,None,:].cuda()).cpu().detach().numpy())\n",
-    "            test_labels.append(labels.numpy())\n",
-    "        test_emb = np.concatenate(test_emb)\n",
-    "        test_labels = np.concatenate(test_labels)\n",
-    "    else:\n",
-    "        test_emb = list()\n",
-    "        test_labels = list()\n",
-    "        for _, (labels, test_series) in enumerate(test_loader):\n",
-    "            test_emb.append(model(test_series.cuda()).cpu().detach().numpy())\n",
-    "            test_labels.append(labels.numpy())\n",
-    "        test_emb = np.concatenate(test_emb)\n",
-    "        test_labels = np.concatenate(test_labels)\n",
-    "\n",
-    "    \n",
-    "    test_score = np.mean(cross_val_score(classifier, test_emb, y=test_labels, cv=5, n_jobs=5))\n",
-    "\n",
-    "    \n",
-    "    return train_score, test_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +797,7 @@
     "\n",
     "train_score_list = []\n",
     "test_score_list = []\n",
-    "dataset_names = []\n",
+    "dataset_names_list = []\n",
     "\n",
     "for dataset_name in dataset_names_to_test:\n",
     "    print('Doing {}'.format(dataset_name))\n",
@@ -933,16 +816,16 @@
     "\n",
     "    run = wandb.init(\n",
     "            project=\"self-supervised-time-series\",\n",
-    "            name=\"Transfert - {}\".format(os.path.basename(dir_path)),\n",
-    "            tags=[os.path.basename(dir_path)],\n",
-    "            group=\"Transfert from FordA\",\n",
+    "            name='ALL EXPERIMENTS - {}'.format(dataset_name),\n",
+    "            tags=[dataset_name, 'Multivariate'],\n",
+    "            group='Multivariate Transferability',\n",
     "            entity=\"nicolas-dufour-team\",\n",
     "            reinit=True,\n",
     "        )\n",
     "    # try:\n",
     "    train_score, test_score = compute_accuracy(model, datamodule)\n",
     "    print(\"\\n\", train_score, test_score)\n",
-    "    dataset_name.append(os.path.basename(dir_path))\n",
+    "    dataset_names_list.append(dataset_name)\n",
     "    wandb.log({\"Train score\": train_score})\n",
     "    wandb.log({\"Test score\": test_score})\n",
     "    train_score_list.append(train_score)\n",
@@ -951,7 +834,7 @@
     "    #     print('Dataset: {} does not have enough example per class (will fix that)'.format(os.path.basename(dir_path)))\n",
     "    run.finish()\n",
     "    results = pd.DataFrame(\n",
-    "        np.array([dataset_name, train_score_list, test_score_list]).transpose(),\n",
+    "        np.array([dataset_names_list, train_score_list, test_score_list]).transpose(),\n",
     "        columns=[\"Name\", \"Train Accuracy\", \"Test Accuracy\"],\n",
     "    )\n",
     "    results.to_csv(\"./results_transferability_multivariate.csv\")\n",
@@ -1134,7 +1017,7 @@
     "uea_dataset_list = uea_dataset_list()\n",
     "\n",
     "\n",
-    "dataset_names = []\n",
+    "dataset_names_list = []\n",
     "train_score_list = []\n",
     "test_score_list = []\n",
     "\n",
@@ -1144,90 +1027,87 @@
     "    \n",
     "    # First one gives *** second one gives cuda outof memory (managable), third is 'non a zip file\n",
     "    if dataset_name in ['DuckDuckGeese', 'Ering']: \n",
-    "        dataset_names.append(dataset_name)\n",
+    "        dataset_names_list.append(dataset_name)\n",
     "        train_score_list.append(np.nan)\n",
     "        test_score_list.append(np.nan)\n",
     "        continue\n",
     "\n",
-    "    try:\n",
-    "        # Datamodule importation\n",
-    "        datamodule = TimeSeriesDataModule('', '', batch_size, num_workers, dataset_name, min_length=20, multivariate=True, fill_na=True)\n",
-    "        datamodule.setup()\n",
+    "    #try:\n",
+    "    # Datamodule importation\n",
+    "    datamodule = TimeSeriesDataModule('', '', batch_size, num_workers, dataset_name, min_length=20, multivariate=True, fill_na=True)\n",
+    "    datamodule.setup()\n",
     "\n",
-    "        in_channels = datamodule.train_set.time_series.shape[1]\n",
+    "    in_channels = datamodule.train_set.time_series.shape[1]\n",
     "\n",
-    "        # Model definition\n",
-    "        model = TimeSeriesEmbedder(\n",
-    "            in_channels = in_channels,\n",
-    "            channels = channels,\n",
-    "            depth = depth,\n",
-    "            reduced_size = reduced_size,\n",
-    "            out_channels = out_channels,\n",
-    "            kernel_size = kernel_size,\n",
-    "            lr=lr,\n",
-    "            weight_decay = weight_decay,\n",
-    "            betas = betas,\n",
-    "            train_path='',\n",
-    "            test_path='', \n",
-    "            dataset_name=dataset_name,\n",
-    "            multivariate=True, \n",
-    "            loss = loss,\n",
-    "            temp = temp)\n",
+    "    # Model definition\n",
+    "    model = TimeSeriesEmbedder(\n",
+    "        in_channels = in_channels,\n",
+    "        channels = channels,\n",
+    "        depth = depth,\n",
+    "        reduced_size = reduced_size,\n",
+    "        out_channels = out_channels,\n",
+    "        kernel_size = kernel_size,\n",
+    "        lr=lr,\n",
+    "        weight_decay = weight_decay,\n",
+    "        betas = betas,\n",
+    "        multivariate=True, \n",
+    "        loss = loss,\n",
+    "        temp = temp)\n",
     "\n",
-    "        max_steps = 2000\n",
-    "        checkpoint_callback = pl.callbacks.ModelCheckpoint(\n",
-    "            mode=\"min\",\n",
-    "            monitor=\"train_loss_epoch\",\n",
-    "            dirpath=\"checkpoints\",\n",
-    "            filename=\"causalcnn-{epoch:02d}-{train_loss_epoch:.2f}\",\n",
-    "        )\n",
+    "    max_steps = 2000\n",
+    "    checkpoint_callback = pl.callbacks.ModelCheckpoint(\n",
+    "        mode=\"min\",\n",
+    "        monitor=\"train_loss_epoch\",\n",
+    "        dirpath=\"checkpoints\",\n",
+    "        filename=\"causalcnn-{epoch:02d}-{train_loss_epoch:.2f}\",\n",
+    "    )\n",
     "\n",
     "\n",
-    "        run = wandb.init(\n",
-    "                project='self-supervised-time-series',\n",
-    "                name='ALL EXPERIMENTS - {}'.format(dataset_name),\n",
-    "                tags=[dataset_name, 'Multivariate'],\n",
-    "                group='Multivariate SimCLR loss',\n",
-    "                entity='nicolas-dufour-team',\n",
-    "                reinit=True\n",
-    "                )\n",
-    "        wandb_logger = pl.loggers.WandbLogger()\n",
-    "        trainer = pl.Trainer(\n",
-    "            gpus=1,\n",
-    "            max_steps=max_steps,\n",
-    "            num_sanity_val_steps = -1,\n",
-    "            logger=wandb_logger,\n",
-    "            # val_check_interval=50,\n",
-    "            callbacks=[checkpoint_callback],\n",
-    "        )\n",
-    "        model.datamodule = datamodule\n",
-    "        trainer.fit(model, datamodule)\n",
-    "        fig = trainer.test(verbose=False)\n",
+    "    run = wandb.init(\n",
+    "            project='self-supervised-time-series',\n",
+    "            name='ALL EXPERIMENTS - {}'.format(dataset_name),\n",
+    "            tags=[dataset_name, 'Multivariate'],\n",
+    "            group='Multivariate SimCLR loss',\n",
+    "            entity='nicolas-dufour-team',\n",
+    "            reinit=True\n",
+    "            )\n",
+    "    wandb_logger = pl.loggers.WandbLogger()\n",
+    "    trainer = pl.Trainer(\n",
+    "        gpus=1,\n",
+    "        max_steps=max_steps,\n",
+    "        num_sanity_val_steps = -1,\n",
+    "        logger=wandb_logger,\n",
+    "        # val_check_interval=50,\n",
+    "        callbacks=[checkpoint_callback],\n",
+    "    )\n",
+    "    model.datamodule = datamodule\n",
+    "    trainer.fit(model, datamodule)\n",
+    "    fig = trainer.test(verbose=False)\n",
     "\n",
     "\n",
-    "        train_score, test_score = model.compute_scores()\n",
-    "        print('\\n', train_score, test_score)\n",
-    "        dataset_name.append(dataset_name)\n",
-    "        wandb.log({'Train score': train_score})\n",
-    "        wandb.log({'Test score': test_score})\n",
-    "        train_score_list.append(train_score)\n",
-    "        test_score_list.append(test_score)\n",
-    "        # except:\n",
-    "        #     print('Dataset: {} does not have enough example per class (will fix that)'.format(os.path.basename(dir_path)))\n",
-    "        run.finish()\n",
-    "        results = pd.DataFrame(np.array([dataset_name,train_score_list, test_score_list]).transpose(), columns=['Name', 'Train Accuracy', 'Test Accuracy'])\n",
-    "        results.to_csv('./results_multivariate.csv')\n",
-    "        results.to_csv('/content/drive/MyDrive/results_multivariate.csv')\n",
+    "    train_score, test_score = compute_accuracy(model, datamodule)\n",
+    "    print('\\n', train_score, test_score)\n",
+    "    dataset_names_list.append(dataset_name)\n",
+    "    wandb.log({'Train score': train_score})\n",
+    "    wandb.log({'Test score': test_score})\n",
+    "    train_score_list.append(train_score)\n",
+    "    test_score_list.append(test_score)\n",
+    "    # except:\n",
+    "    #     print('Dataset: {} does not have enough example per class (will fix that)'.format(os.path.basename(dir_path)))\n",
+    "    run.finish()\n",
+    "    results = pd.DataFrame(np.array([dataset_names_list,train_score_list, test_score_list]).transpose(), columns=['Name', 'Train Accuracy', 'Test Accuracy'])\n",
+    "    results.to_csv('./results_multivariate.csv')\n",
+    "    results.to_csv('/content/drive/MyDrive/results_multivariate.csv')\n",
     "\n",
-    "    except:\n",
-    "        print('Dataset: {} does not have enough example per class (will fix that)'.format(dataset_name))\n",
-    "        dataset_names.append(dataset_name)\n",
-    "        train_score_list.append(np.nan)\n",
-    "        test_score_list.append(np.nan)\n",
-    "        results = pd.DataFrame(np.array([dataset_names,train_score_list, test_score_list]).transpose(), columns=['Name', 'Train Accuracy', 'Test Accuracy'])\n",
-    "        results.to_csv('./results_multivariate.csv')\n",
-    "        results.to_csv('/content/drive/MyDrive/results_multivariate.csv')\n",
-    "        continue"
+    "    # except:\n",
+    "    #     print('Dataset: {} does not have enough example per class (will fix that)'.format(dataset_name))\n",
+    "    #     dataset_names_list.append(dataset_name)\n",
+    "    #     train_score_list.append(np.nan)\n",
+    "    #     test_score_list.append(np.nan)\n",
+    "    #     results = pd.DataFrame(np.array([dataset_names_list,train_score_list, test_score_list]).transpose(), columns=['Name', 'Train Accuracy', 'Test Accuracy'])\n",
+    "    #     results.to_csv('./results_multivariate.csv')\n",
+    "    #     results.to_csv('/content/drive/MyDrive/results_multivariate.csv')\n",
+    "    #     continue"
    ]
   },
   {
