Add mean to do GAP

--- a/Experiments.ipynb
+++ b/Experiments.ipynb
@@ -186,6 +186,7 @@
     "    CausalCNN,\n",
     "    CausalCNNEncoder,\n",
     "    CausalConvolutionBlock,\n",
+    "    Mean,\n",
     "    Chomp1d,\n",
     "    SqueezeChannels,\n",
     ")\n",
@@ -571,7 +572,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "tIzIpTQ9DAb3"
+    "id": "tIzIpTQ9DAb3",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -621,7 +623,8 @@
     "    loss = loss,\n",
     "    temp = temp)\n",
     "\n",
-    "model.datamodule = datamodule\n"
+    "model.datamodule = datamodule\n",
+    "model"
    ]
   },
   {
@@ -1011,6 +1014,7 @@
     "kernel_size = 3\n",
     "loss = \"xent\"\n",
     "temp = 1\n",
+    "global_average_pooling = False\n",
     "\n",
     "\n",
     "# List of the multivariates dataset\n",
@@ -1052,7 +1056,8 @@
     "        betas = betas,\n",
     "        multivariate=True, \n",
     "        loss = loss,\n",
-    "        temp = temp)\n",
+    "        temp = temp, \n",
+    "        global_average_pooling = global_average_pooling)\n",
     "\n",
     "    max_steps = 2000\n",
     "    checkpoint_callback = pl.callbacks.ModelCheckpoint(\n",
@@ -1210,7 +1215,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": "true",
     "hidden": true,
     "id": "ePND2TJlFMjL",
     "tags": []
@@ -1333,11 +1337,12 @@
     "print(\"Input Shape:\")\n",
     "print(list(X_train.shape), \"\\n\")\n",
     "input = X_train\n",
-    "for block_ii in range(len(model_from_scratch)):\n",
+    "for block_ii in range(len(model_from_scratch)-2):\n",
     "    print(\"{}:\".format(model_name_from_scratch[block_ii]))\n",
     "    output = model_from_scratch[block_ii](input)\n",
     "    print(list(output.shape), \"\\n\")\n",
-    "    input = output"
+    "    input = output\n",
+    "input[0]"
    ]
   },
   {
@@ -1361,14 +1366,14 @@
    "source": [
     "# Instead of the Global Average Pooling\n",
     "linear_to_squeeze = torch.nn.Linear(N_sample, 1).double()\n",
-    "\n",
+    "Mean_to_squeeze = Mean()\n",
     "\n",
     "model_from_scratch_experiment = [\n",
     "    ConvBlock_1,\n",
     "    ConvBlock_2,\n",
     "    ConvBlock_3,\n",
     "    ConvBlock_4,\n",
-    "    linear_to_squeeze,\n",
+    "    Mean_to_squeeze,\n",
     "    squeeze,\n",
     "    linear,\n",
     "]\n",
@@ -1377,7 +1382,7 @@
     "    \"ConvBlock_2\",\n",
     "    \"ConvBlock_3\",\n",
     "    \"ConvBlock_4\",\n",
-    "    \"linear_to_squeeze\",\n",
+    "    \"Mean_to_squeeze\",\n",
     "    \"squeezing\",\n",
     "    \"final FC\",\n",
     "]\n",
@@ -1385,11 +1390,12 @@
     "print(\"Input Shape:\")\n",
     "print(list(X_train.shape), \"\\n\")\n",
     "input = X_train\n",
-    "for block_ii in range(len(model_from_scratch_experiment)):\n",
+    "for block_ii in range(len(model_from_scratch_experiment)-2):\n",
     "    print(\"{}:\".format(model_name_from_scratch_experiment[block_ii]))\n",
     "    output = model_from_scratch_experiment[block_ii](input)\n",
     "    print(list(output.shape), \"\\n\")\n",
-    "    input = output"
+    "    input = output\n",
+    "input[0]"
    ]
   },
   {
